...
    <string name="i_supervise">I supervise</string>
    <string name="supervising_me">supervising me</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_don_t_have_an_account">Forgot password? Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="supervision_groups">supervision groups</string>
    <string name="select_a_group_to_see_your_schedule_in_the_group">select a group to see your schedule in the group</string>
    <string name="my_scheduled">my scheduled</string>
    <string name="add_user">add user</string>
    <string name="choose_a_contact_to_supervise_or_to_invite_for_registration">Choose a contact to supervise or to invite for registration</string>
    <string name="group">Group</string>
...
